refactor(spindle-ui): build css for storybook with webpack

--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -12,9 +12,8 @@
     "test:interaction": "jest",
     "prebundlesize": "yarn build",
     "bundlesize": "npx bundlesize",
-    "dev": "run-p storybook:style storybook",
-    "storybook": "start-storybook -p 6006 -c .storybook -s ./public",
-    "storybook:style": "postcss src/index.css --base src -d ./public --watch",
+    "dev": "yarn storybook:start",
+    "storybook:start": "start-storybook -p 6006 -c .storybook",
     "clean": "npx rimraf dist",
     "prebuild": "yarn clean",
     "build": "run-p build:*",
