chore(spindle-ui): change bundlesize limit for icon

--- a/packages/spindle-ui/bundlesize.config.json
+++ b/packages/spindle-ui/bundlesize.config.json
@@ -1,7 +1,15 @@
 {
   "files": [
     {
-      "path": "./dist/**/*.js",
+      "path": "./dist/Icon/index.js",
+      "maxSize": "2 kB"
+    },
+    {
+      "path": "./dist/Icon/!(index).js",
+      "maxSize": "1.5 kB"
+    },
+    {
+      "path": "./dist/!(Icon)/*.js",
       "maxSize": "1 kB"
     },
     {
