chore(spindle-ui): hosting UI catalog

--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -14,6 +14,9 @@
     "bundlesize": "npx bundlesize",
     "dev": "yarn storybook:start",
     "storybook:start": "start-storybook -p 6006 -c .storybook",
+    "storybook:build": "build-storybook -o public -c .storybook",
+    "storybook:deploy": "firebase deploy --only hosting",
+    "serve": "firebase serve",
     "clean": "npx rimraf dist",
     "prebuild": "yarn clean",
     "build": "run-p build:*",
@@ -49,6 +52,7 @@
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "firebase-tools": "^8.10.0",
     "jest": "^26.1.0",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
