chore: set renovate group

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -3,7 +3,11 @@
     "config:base",
     ":label(renovate)",
     ":preserveSemverRanges",
-    ":timezone(Asia/Tokyo)"
+    ":timezone(Asia/Tokyo)",
+    "group:definitelyTyped",
+    "group:linters",
+    "group:postcss",
+    "group:typescript-eslintMonorepo"
   ],
   "assignees": [
     "herablog",
