ci: resolve GCS credential

--- a/.github/workflows/regression-test.yml
+++ b/.github/workflows/regression-test.yml
@@ -36,4 +36,8 @@ jobs:
           git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
       - env:
           GCS_BUCKET_NAME_REG_SUIT: ${{ secrets.GCS_BUCKET_NAME_REG_SUIT }}
-        run: npx lerna run --scope @openameba/spindle-ui test:regression
+          GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
+        run: |
+          printf -- '%s' "$GOOGLE_APPLICATION_CREDENTIALS_JSON" | base64 --decode > "${PWD}/storage-key.json"
+          export GOOGLE_APPLICATION_CREDENTIALS="${PWD}/storage-key.json"
+          npx lerna run --scope @openameba/spindle-ui test:regression
