--- a/packages/spindle-ui/regconfig.json
+++ b/packages/spindle-ui/regconfig.json
@@ -3,7 +3,10 @@
     "actualDir": ".reg-suit/actual_images"
   },
   "plugins": {
-    "reg-keygen-git-hash-plugin": {},
+    "reg-keygen-git-hash-plugin": true,
+    "reg-notify-github-plugin": {
+      "clientId": "$REG_SUIT_NOTIFY_CLIENT_ID"
+    },
     "reg-publish-gcs-plugin": {
       "bucketName": "$GCS_BUCKET_NAME_REG_SUIT"
     }
