chore: Regression testing with Storybook (#36)
* build(spindle-ui): add reg-suit

* feat(spindle-ui): setup reg-suit

* ci: add regression-test workflow

* fix(spindle-ui): without test:regression

* fix: need checkout current branch

* ci: resolve GCS credential

* fix: timeout storycap

* ci: shrink trigger

* fix: fix get to branch name

* fix: fix branch name

* ci: notify regression test results

--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -5,7 +5,7 @@
   "types": "./dist/index.d.ts",
   "style": "./dist/index.css",
   "scripts": {
-    "test": "run-p bundlesize lint test:*",
+    "test": "run-p bundlesize lint test:interaction",
     "lint": "yarn lint:style",
     "lint:style": "stylelint '**/*.css'",
     "format": "yarn lint:style --fix",
@@ -16,6 +16,7 @@
     "storybook:start": "start-storybook -p 6006 -c .storybook",
     "storybook:build": "build-storybook -o public -c .storybook",
     "storybook:deploy": "firebase deploy --only hosting",
+    "test:regression": "reg-suit run",
     "serve": "firebase serve",
     "clean": "npx rimraf dist",
     "prebuild": "yarn clean",
@@ -56,6 +57,7 @@
     "jest": "^26.1.0",
     "postcss-cli": "^8.0.0",
     "postcss-import": "^12.0.1",
+    "reg-suit": "^0.10.7",
     "sinon": "^9.0.2",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
