--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -25,7 +25,8 @@
     "build:style": "postcss src/**/*.css src/*.css --base src -d dist/",
     "preicon": "npx rimraf 'src/Icon/!(*.stories).tsx' && npx cpx '../spindle-icons/dist/!(sprite).svg' icon-tmp",
     "icon": "svgr --out-dir src/Icon icon-tmp",
-    "posticon": "npx rimraf icon-tmp"
+    "posticon": "npx rimraf icon-tmp",
+    "prepublishOnly": "yarn build"
   },
   "license": "MIT",
   "private": true,
