chore: take screenshot when push

--- a/.github/workflows/regression-test.yml
+++ b/.github/workflows/regression-test.yml
@@ -2,8 +2,8 @@ name: regression-test
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'packages/spindle-ui/**'
   pull_request:
     paths:
       - 'packages/spindle-ui/**'
