--- a/packages/spindle-icons/package.json
+++ b/packages/spindle-icons/package.json
@@ -8,8 +8,8 @@
     "build": "run-s icon:get icon:optimize icon:sprite",
     "postbuild": "ts-node scripts/icon-doc.ts",
     "icon:get": "ts-node scripts/get-icons.ts",
-    "icon:optimize": "svgo --config .svgo.yaml dist/*.svg",
-    "icon:sprite": "svg-sprite --config sprite.json --shape-transform-svgo sprite.svgo.json dist/*.svg",
+    "icon:optimize": "svgo --config .svgo.yaml dist/svg/*.svg",
+    "icon:sprite": "svg-sprite --config sprite.json --shape-transform-svgo sprite.svgo.json dist/svg/*.svg",
     "serve": "npx serve"
   },
   "license": "SEE LICENSE IN README.md",
