--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,10 @@
   "command": {
     "version": {
       "message": "chore(release): publish",
-      "allowBranch": "version/*"
+      "allowBranch": [
+        "version/*",
+        "release/*"
+      ]
     }
   }
 }
