--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -60,6 +60,7 @@
     "jest": "^26.1.0",
     "postcss-cli": "^8.0.0",
     "postcss-import": "^12.0.1",
+    "postcss-pxtorem": "herablog/postcss-pxtorem#useem",
     "reg-suit": "^0.10.7",
     "sinon": "^9.0.2",
     "stylelint": "^13.6.1",
