--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@openameba/spindle-ui",
   "version": "0.3.0",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "style": "./dist/index.css",
+  "main": "./index.js",
+  "types": "./index.d.ts",
+  "style": "./index.css",
   "scripts": {
     "test": "run-p bundlesize lint test:interaction",
     "lint": "yarn lint:style",
@@ -19,6 +19,7 @@
     "test:regression": "reg-suit run",
     "serve": "firebase serve",
     "clean": "npx rimraf dist",
+    "cp": "npx cpx 'dist/**/*' .",
     "prebuild": "yarn clean",
     "build": "run-p build:*",
     "build:script": "tsc",
@@ -26,12 +27,9 @@
     "preicon": "npx rimraf 'src/Icon/!(*.stories).tsx' && npx cpx '../spindle-icons/dist/svg/!(sprite).svg' icon-tmp",
     "icon": "svgr --out-dir src/Icon icon-tmp",
     "posticon": "npx rimraf icon-tmp",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build && yarn cp"
   },
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
   "publishConfig": {
     "access": "public"
   },
