--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -42,6 +42,7 @@
     "@storybook/addon-a11y": "^6.0.0",
     "@storybook/addon-actions": "^6.0.0",
     "@storybook/addon-docs": "^6.0.28",
+    "@storybook/addon-viewport": "^6.0.28",
     "@storybook/react": "^6.0.0",
     "@svgr/cli": "^5.4.0",
     "@types/chai": "^4.2.12",
