--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -53,6 +53,7 @@
     "babel-loader": "^8.1.0",
     "bundlesize": "^0.18.0",
     "chai": "^4.2.0",
+    "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "firebase-tools": "^8.12.0",
