perf(spindle-ui): decrese file size budget for css

--- a/packages/spindle-ui/bundlesize.config.json
+++ b/packages/spindle-ui/bundlesize.config.json
@@ -17,8 +17,12 @@
       "maxSize": "1 kB"
     },
     {
+      "path": "./dist/**/!(index).css",
+      "maxSize": "1.5 kB"
+    },
+    {
       "path": "./dist/index.css",
-      "maxSize": "10 kB"
+      "maxSize": "5 kB"
     }
   ]
 }
