chore: ignore merge commit to detect changes with lerna

--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,7 @@
   "packages": [
     "packages/*"
   ],
+  "includeMergedTags": true,
   "command": {
     "version": {
       "message": "chore(release): publish",
