--- a/examples/styled-components/package.json
+++ b/examples/styled-components/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build": "webpack",
-    "serve": "npx serve dist",
+    "serve": "npx serve ./",
     "test": "echo ok"
   },
   "license": "MIT",
