test(spindle-ui): setup testing-library

--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -45,6 +45,9 @@
     "@storybook/addon-viewport": "^6.0.28",
     "@storybook/react": "^6.0.0",
     "@svgr/cli": "^5.4.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.2.2",
     "@types/chai": "^4.2.12",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
