--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
+          base: main
           branch: release/chores-into-default-branch
           delete-branch: true
           title: 'chore(release): publish'
