--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
-          base: main
+          base: ${{ github.event.push.repository.default_branch }}
           branch: release/chores-into-default-branch
           delete-branch: true
           title: 'chore(release): publish'
