--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
       - name: Create Pull Request
-        run: |
+        run: >
           curl
           -X POST
           -H "Accept: application/vnd.github.v3+json"
