chore: apply frozen-lockfile to lerna bootstrap in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
             */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install --frozen-lockfile
-      - run: yarn bootstrap
+      - run: npx lerna bootstrap -- --frozen-lockfile
       # Build application to check if the system works or not
       # TODO: Build script for spindle-icon should be added
       - name: build application
