--- a/.github/workflows/deploy-ui-catalog.yml
+++ b/.github/workflows/deploy-ui-catalog.yml
@@ -24,7 +24,7 @@ jobs:
             */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - run: yarn install --frozen-lockfile
-      - run: yarn bootstrap
+      - run: npx lerna bootstrap -- --frozen-lockfile
       - name: Update UI catalog
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
