chore(spindle-icons): make preparation task optional

--- a/packages/spindle-icons/package.json
+++ b/packages/spindle-icons/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "clean": "npx rimraf dist",
     "mkdir": "npx mkdirp dist",
-    "prebuild": "run-s clean mkdir",
+    "prepare": "run-s clean mkdir",
     "build": "run-s icon:get icon:optimize icon:sprite",
     "postbuild": "ts-node scripts/icon-doc.ts",
     "icon:get": "ts-node scripts/get-icons.ts",
