--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -60,6 +60,8 @@
     "jest": "^26.1.0",
     "postcss-cli": "^8.0.0",
     "postcss-import": "^12.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reg-suit": "^0.10.7",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
