--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-ui",
-  "version": "0.12.0-alpha.0",
+  "version": "0.12.0",
   "main": "./index.js",
   "types": "./index.d.ts",
   "style": "./index.css",
