--- a/examples/styled-components/tsconfig.json
+++ b/examples/styled-components/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "module": "es2015",
+    "moduleResolution": "node",
     "jsx": "react",
     "lib": ["dom"]
   },
