--- a/examples/styled-components/package.json
+++ b/examples/styled-components/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
+    "@herablog/spindle-ui": "0.15.0-1",
     "@openameba/spindle-ui": "^0.5.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
