--- a/.github/workflows/deploy-highlightjs-styles-preview.yml
+++ b/.github/workflows/deploy-highlightjs-styles-preview.yml
@@ -1,16 +1,16 @@
-name: deploy Highlight.js styles
+name: deploy Highlight.js themes
 
 on:
   pull_request:
     paths:
-      - 'packages/spindle-highlightjs-styles/**'
+      - 'packages/spindle-highlightjs-themes/**'
 
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/spindle-highlightjs-styles/
+        working-directory: ./packages/spindle-highlightjs-themes/
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2-beta
@@ -24,4 +24,4 @@ jobs:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           expires: 30d
-          entryPoint: ./packages/spindle-highlightjs-styles/
+          entryPoint: ./packages/spindle-highlightjs-themes/
