chore(spindle-syntax-themes): rename package

--- a/packages/spindle-highlightjs-themes/firebase.json
+++ b/packages/spindle-highlightjs-themes/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "ameba-spindle-highlightjs",
+    "site": "ameba-spindle-syntax",
     "public": "public",
     "ignore": [
       "firebase.json",
