--- a/.github/workflows/regression-test.yml
+++ b/.github/workflows/regression-test.yml
@@ -1,9 +1,13 @@
 name: regression-test
 
 on:
-  - push
-  - pull_request_target
-  - workflow_dispatch
+  push:
+    paths:
+      - 'packages/spindle-ui/**'
+  pull_request_target:
+    paths:
+      - 'packages/spindle-ui/**'
+  workflow_dispatch:
 
 jobs:
   regression-test:
