--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -7,6 +7,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/openameba/spindle.git"
