--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,6 @@ jobs:
           curl
           -X POST
           -H "Accept: application/vnd.github.v3+json"
-          -H "Authorization: token ${{ github.token }}"
+          -H "Authorization: token ${{ secrets.PERSONAL_ACCESS_TOKEN }}"
           https://api.github.com/repos/${{ github.event.repository.owner.name }}/${{ github.event.repository.name }}/pulls
           -d '{"head":"${{ steps.extract_branch.outputs.name }}","base":"${{ github.event.repository.default_branch }}","title":"chore(release): publish"}'
