--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -36,7 +36,7 @@ jobs:
           ICON_NAMES_INPUT: ${{ github.event.inputs.modified_components }}
         run: |
           ICON_NAMES="${ICON_NAMES_INPUT:-["ALL"]}"
-          node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: '$ICON_NAMES' })" > packages/spindle-icons/figma.json
+          node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: $ICON_NAMES })" > packages/spindle-icons/figma.json
           npx lerna run --scope @openameba/spindle-icons build
           npx lerna run --scope @openameba/spindle-ui icon
           yarn format
