chore(spindle-tokens): add files to publish

--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -7,6 +7,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "tokens/**",
+    "spindle-tokens.png"
+  ],
   "private": true,
   "repository": {
     "type": "git",
