--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -18,12 +18,15 @@
   },
   "scripts": {
     "build": "style-dictionary build",
+    "preexport": "tsc",
     "export": "npx @figma-export/cli use-config"
   },
   "bugs": {
     "url": "https://github.com/openameba/spindle/issues"
   },
   "devDependencies": {
+    "@figma-export/types": "^3.4.0",
+    "@types/lodash.setwith": "^4.3.6",
     "jsonabc": "^2.3.1",
     "lodash.setwith": "^4.3.2",
     "make-dir": "^3.1.0",
