--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -23,12 +23,13 @@
     "build:tokens": "style-dictionary build",
     "build:css": "style-dictionary build --config ./config-css.json",
     "preexport": "tsc",
-    "export": "npx @figma-export/cli use-config"
+    "export": "./node_modules/.bin/figma-export use-config"
   },
   "bugs": {
     "url": "https://github.com/openameba/spindle/issues"
   },
   "devDependencies": {
+    "@figma-export/cli": "^3.4.0",
     "@figma-export/types": "^3.4.0",
     "@types/lodash.setwith": "^4.3.6",
     "jest": "^27.2.4",
