build(spindle-tokens): build before publishing

--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -23,7 +23,8 @@
     "build:tokens": "style-dictionary build",
     "build:css": "style-dictionary build --config ./config-css.json",
     "preexport": "tsc",
-    "export": "./node_modules/.bin/figma-export use-config"
+    "export": "./node_modules/.bin/figma-export use-config",
+    "prepublishOnly": "yarn build"
   },
   "bugs": {
     "url": "https://github.com/openameba/spindle/issues"
