chore(spindle-tokens): make private for now

--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -4,6 +4,7 @@
   "description": "Spindle design tokens.",
   "homepage": "https://github.com/openameba/spindle#readme",
   "license": "MIT",
+  "private": true,
   "publishConfig": {
     "access": "public"
   },
