--- a/packages/spindle-ui/bundlesize.config.json
+++ b/packages/spindle-ui/bundlesize.config.json
@@ -1,11 +1,11 @@
 {
   "files": [
     {
-      "path": "./dist/Icon/@(OnedariFill|Peta).js",
+      "path": "./dist/Icon/@(OnedariFill|Peta|Amebapick).js",
       "maxSize": "2.1 kB"
     },
     {
-      "path": "./dist/Icon/!(index|OnedariFill|Peta).js",
+      "path": "./dist/Icon/!(index|OnedariFill|Peta|Amebapick).js",
       "maxSize": "1.5 kB"
     },
     {
