--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "plugins": [
     "@typescript-eslint"
