--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
     "eslint": "7.5.0",
-    "eslint-config-prettier": "7.0.0",
-    "eslint-plugin-prettier": "3.1.4",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "7.20.3",
     "husky": "^7.0.2",
     "is-ci": "^3.0.0",
