chore: rename script name to fix format

--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -35,7 +35,7 @@ jobs:
           node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: '$ICON_NAMES' })" > packages/spindle-icons/figma.json
           npx lerna run --scope @openameba/spindle-icons build
           npx lerna run --scope @openameba/spindle-ui icon
-          yarn format
+          yarn fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
