--- a/.github/workflows/build-tokens.yml
+++ b/.github/workflows/build-tokens.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           npx lerna run --scope @openameba/spindle-tokens export
           # npx lerna run --scope @openameba/spindle-tokens build
-          yarn format
+          yarn fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
