--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -12,7 +12,7 @@
     "test": "run-p bundlesize lint test:interaction",
     "lint": "yarn lint:style",
     "lint:style": "stylelint '**/*.css'",
-    "format": "yarn lint:style --fix",
+    "fix": "yarn lint:style --fix",
     "test:interaction": "jest",
     "prebundlesize": "yarn build",
     "bundlesize": "npx bundlesize",
