--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -53,14 +53,15 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.0.0",
     "@types/jest": "^27.0.0",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.1.0",
     "bundlesize": "^0.18.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.14",
     "firebase-tools": "^10.0.0",
     "jest": "^27.0.0",
-    "postcss-cli": "^8.0.0",
-    "postcss-import": "^12.0.1",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reg-suit": "^0.11.0",
