--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-actions": "^6.1.10",
     "@storybook/addon-backgrounds": "^6.1.10",
     "@storybook/addon-docs": "^6.1.10",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^6.1.10",
     "@storybook/react": "^6.1.10",
     "@svgr/cli": "^6.0.0",
