build(spindle-hooks): support esm

--- a/packages/spindle-hooks/tsconfig.json
+++ b/packages/spindle-hooks/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": ["DOM"],
     "jsx": "react",
     "outDir": "dist",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true
+    "moduleResolution": "node"
   },
   "include": ["src"],
   "exclude": ["src/**/*.test.*"]
