--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "run-p bundlesize test:interaction",
     "test:interaction": "jest",
-    "prebundlesize": "yarn build",
+    "prebundlesize": "yarn build:script",
     "bundlesize": "npx bundlesize",
     "clean": "npx rimraf dist",
     "cp": "npx cpx 'dist/**/*' .",
     "prebuild": "yarn clean",
-    "build": "run-p build:*",
+    "build": "run-s build:script build:script:rename",
     "build:script": "tsc",
+    "build:script:rename": "npx renamer --find js --replace mjs 'dist/**'",
     "prepublishOnly": "yarn build && yarn cp"
   },
   "license": "MIT",
