--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.0.0",
     "@types/jest": "^27.0.0",
     "babel-loader": "^8.1.0",
