--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -65,6 +65,7 @@
     "babel-loader": "^8.1.0",
     "bundlesize": "^0.18.0",
     "cssnano": "^4.1.10",
+    "dialog-polyfill": "^0.5.6",
     "firebase-tools": "^10.0.0",
     "jest": "^27.0.0",
     "postcss-cli": "^8.0.0",
